# aiden-chat

./: .eslintignore  .eslintrc.js  .gitignore  .host_server_version  .prettierrc.js  LICENSE  README.md  components.json  download_binaries.sh  i18n.mjs  next.config.mjs  package.json  postcss.config.mjs  tailwind.config.mjs  update_tauri_config.sh
.github/scripts/: check-signature.sh  crc64.py  download-bin.sh  gen-latest-json.sh  notarize.sh  setup-macos-codesign.sh  sign-all.sh  upload-release.sh
.github/workflows/: app.yml  pr-review.yml  release-mac.yml  release-windows.yml  release.yml  test-notarize.sh
app/: command.ts  constant.ts  global.css  layout.tsx  page.tsx  typing.ts  utils.ts  ws.worker.ts
app/client/: api.ts  controller.ts  fake-controller.ts
app/components/: agent-list.tsx  agent-management.tsx  agent-tab.tsx  artifacts.tsx  chat-list.tsx  chat-message-item-file.tsx  chat-message-item-tab.tsx  chat.module.scss  chat.tsx  circle-progress.tsx  delete-dialog.tsx  divider.tsx  drag-layout.tsx  emoji-list.tsx  error.tsx  file-item.tsx  file-result.tsx  file-uploader.tsx  forgot-password.tsx  google-auth.tsx  google-oauth-button.tsx  home.module.scss  home.tsx  image-preview.tsx  image-uploader.tsx  invite-dialog.tsx  invite.tsx  loading.tsx  login.tsx  markdown.tsx  mcp-tooltip.tsx  modal.tsx  model-select.tsx  new-task.tsx  password.tsx  restart-dialog.tsx  scroll-container.tsx  settings.tsx  showcase-list.tsx  sidebar.tsx  (+11 more)
app/components/confirm-modal/: confirm-api-provider.tsx  confirm-context.tsx  confirm.ts
app/components/setting/: about-us.tsx  add-model-modal.tsx  change-password-modal.tsx  general.tsx  mcp-detail.tsx  mcp-editor.tsx  mcp-management.tsx  mcp-oauth-modal.tsx  mcp-setting-modal.tsx  mcp-table-item.tsx  mcp-table.tsx  mcp-template-modal.tsx  model-list.tsx  provider-icon.tsx  provider-select.tsx  subscription.tsx  type.ts
app/components/shadcn/: accordion.tsx  alert-dialog.tsx  avatar.tsx  button.tsx  calendar.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  dropdown-select-menu.tsx  hover-card.tsx  input.tsx  label.tsx  multi-select.tsx  popover.tsx  select.tsx  sonner.tsx  switch.tsx  table.tsx  tooltip.tsx
app/config/: build.ts
app/hooks/: use-app-setting.ts  use-app-update.ts  use-file-upload.ts  use-get-model.ts  use-get-token.ts  use-image-upload.ts  use-mcp-config.ts  use-server-ready.ts  use-silent-update.ts  use-theme.ts  use-update-checker.ts  use-websocket.ts
app/libs/: axios.ts
app/locales/: cn.ts  en.ts  index.ts
app/locales/en-US/: auth.json  common.json  general.json  settings.json
app/locales/zh-CN/: auth.json  common.json  general.json  settings.json
app/services/: auth.ts  file.ts  host-server.ts  index.ts  mcp-config.ts  model.ts  oauth.ts  showcase.ts  task.ts  utils.ts
app/store/: agent.ts  app-update.ts  auth.ts  chat.ts  config.ts  file-upload.ts  image-upload.ts  index.ts  mask.ts  mcp.ts  plugin.ts  prompt.ts  setting.ts  sync.ts  task.ts  update.ts
app/styles/: globals.scss  highlight.scss  markdown.scss  window.scss
app/utils/: agent.ts  analysis.ts  chat.ts  fetch-no-proxy.ts  fetch.ts  file.ts  indexedDB-storage.ts  init.ts  log.ts  logger.ts  mcp.ts  model.ts  ms_edge_tts.ts  notification.ts  store.ts  stream.ts  sync.ts  toast.ts  websocket.ts
app/utils/cloud/: upstash.ts  webdav.ts
public/: site.webmanifest
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: logo.icns
src-tauri/resources/: agent.config.json  mcp.config.json
src-tauri/src/: agent.rs  cleanup.rs  constants.rs  lib.rs  logger.rs  main.rs  mcp.rs  request.rs  stream.rs
