[package]
name = "aiden"
version = "0.1.0"
description = "A cross platform app for LLM ChatBot."
authors = ["Yidadaa"]
license = "mit"
repository = ""
default-run = "aiden"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
semver = "1.0"
zip = "2.5.0"
time = "0.3.37"
nix = { version = "0.28", features = ["signal", "process"] }
sentry = "0.31.7"
tokio = { version = "1", features = ["rt", "macros", "io-util", "process"] }
tracing-log = "0.1"
tower-http = { version = "0.4", features = ["trace"] }  # 如果你用 axum
flexi_logger = "0.26"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "std", "env-filter"] }
dotenvy = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "window-set-focus", "os-all", "http-all", "updater", "window-set-position", "process-relaunch", "window-center", "window-set-size", "path-all",
    "notification-all",
    "fs-all",
    "clipboard-all",
    "dialog-all",
    "shell-open",
    "window-close",
    "window-hide",
    "window-maximize",
    "window-minimize",
    "window-set-icon",
    "window-set-ignore-cursor-events",
    "window-set-resizable",
    "window-show",
    "window-start-dragging",
    "window-unmaximize",
    "window-unminimize",
] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", rev = "0fdb85df8ae3ac445822b8c177caecf4532d258e" }
percent-encoding = "2.3.1"
reqwest = "0.11.18"
futures-util = "0.3.30"
bytes = "1.7.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
